--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/DocumentTabView.html
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/DocumentTabView.html
@@ -17,11 +17,13 @@
     <v-label _id = "verticalSeparatorLabel" style-name = "separator-vertical" size-full />
     <v-panel style-name = "panel-pattern spacer-left spacer-right" size-full :expand>
         <v-vertical-layout style-name = "spacer-right-small">
+
             <v-horizontal-layout style-name = "layout-row spacer-top-small" size-full>
-                <v-label _id = "questionLabel" />
-                <v-text-area _id = "bodyField" style-name = "body-text-area" size-full :expand />
+                <v-label _id = "templateLabel" />
+                <v-combo-box _id="templateSelect" :expand/>
             </v-horizontal-layout>
-            <v-horizontal-layout style-name = "layout-row spacer-top" size-full>
+
+            <!--<v-horizontal-layout style-name = "layout-row spacer-top" size-full>
                 <v-label _id = "choiceLabel" />
                 <sb-string-select _id = "choiceSelect" style-name = "layout-strings" size-full :expand />
             </v-horizontal-layout>
@@ -39,11 +41,14 @@
             <v-horizontal-layout style-name = "layout-row spacer-top" size-full>
                 <v-label _id = "tagLabel" />
                 <sb-string-select _id = "tagSelect" style-name = "layout-strings" size-full :expand />
-            </v-horizontal-layout>
+            </v-horizontal-layout>-->
+
             <v-label _id = "submitSeparatorLabel" style-name = "separator spacer-empty" />
+
             <v-horizontal-layout style-name = "layout-row spacer-top spacer-bottom" size-full>
                 <v-button _id = "submitButton" style-name = "button-standard spacer-empty" />
             </v-horizontal-layout>
+
         </v-vertical-layout>
     </v-panel>
 </v-horizontal-layout>
