--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/TemplateTabView.html
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/TemplateTabView.html
@@ -21,6 +21,7 @@
                 <v-label _id="titleLabel"/>
                 <v-text-field _id="titleField" size-full :expand/>
             </v-horizontal-layout>
+            <v-label _id="titleSeparatorLabel" style-name="separator spacer-empty"/>
             <v-horizontal-layout style-name="layout-row spacer-top" size-full>
                 <v-label _id="fieldsLabel"/>
                 <sb-fields-layout _id="fieldsLayout" style-name="layout-strings" size-full :expand/>
