Added all template edition logic

--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/TemplateTabView.html
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/TemplateTabView.html
@@ -24,7 +24,7 @@
             <v-label _id="titleSeparatorLabel" style-name="separator spacer-empty"/>
             <v-horizontal-layout style-name="layout-row spacer-top" size-full>
                 <v-label _id="fieldsLabel"/>
-                <sb-fields-layout _id="templateLayout" style-name="layout-strings" size-full :expand/>
+                <sb-template-layout _id="templateLayout" style-name="layout-strings" size-full :expand/>
             </v-horizontal-layout>
             <v-label _id="submitSeparatorLabel" style-name="separator spacer-empty"/>
             <v-horizontal-layout style-name="layout-row spacer-top spacer-bottom" size-full>
