--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/TemplateTabView.html
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/TemplateTabView.html
@@ -10,14 +10,14 @@
         <v-button _id="createButton" style-name="pattern-button"/>
         <v-label _id="editSeparatorLabel" style-name="separator"/>
         <v-label _id="editLabel" style-name="label-edit"/>
-        <v-panel _id="patternContainer" style-name="panel-patterns-edit" size-full :expand>
-            <v-vertical-layout _id="editPatternLayout"/>
+        <v-panel _id="templateContainer" style-name="panel-patterns-edit" size-full :expand>
+            <v-vertical-layout _id="editTemplateLayout"/>
         </v-panel>
     </v-vertical-layout>
     <v-label _id="verticalSeparatorLabel" style-name="separator-vertical" size-full/>
     <v-panel style-name="panel-pattern spacer-left spacer-right" size-full :expand>
         <v-vertical-layout style-name="spacer-right-small">
-            <v-horizontal-layout _id="titleLayout" style-name="layout-row spacer-top-small" size-full>
+            <v-horizontal-layout style-name="layout-row spacer-top-small" size-full>
                 <v-label _id="titleLabel"/>
                 <v-text-field _id="titleField" size-full :expand/>
             </v-horizontal-layout>
