--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/DocumentTabView.html
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/DocumentTabView.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="package-mapping" content="sb:ru.klapatnyuk.sberbank.web"/>
 </head>
 <body>
 <v-horizontal-layout style-name="container-pattern-poll spacer-left spacer-top" size-full :expand>
@@ -25,21 +26,7 @@
                 <v-text-field _id="titleField" size-full :expand/>
             </v-horizontal-layout>
             <v-label _id="templateSeparatorLabel" style-name="separator spacer-empty"/>
-
-            <!-- temporary -->
-
-            <v-horizontal-layout style-name="layout-row spacer-top" size-full>
-                <v-label _id="lineLabel"/>
-                <v-text-field _id="lineField" size-full :expand/>
-            </v-horizontal-layout>
-            <v-horizontal-layout style-name="layout-row spacer-top" size-full>
-                <v-label _id="areaLabel"/>
-                <v-text-area _id="areaField" style-name="body-text-area" size-full :expand/>
-            </v-horizontal-layout>
-            <v-horizontal-layout style-name="layout-row spacer-top" size-full>
-                <v-check-box _id="checkboxField" style-name="spacer-empty" size-full :expand/>
-            </v-horizontal-layout>
-
+            <sb-document-layout _id="documentLayout"/>
             <v-label _id="submitSeparatorLabel" style-name="separator spacer-empty"/>
             <v-horizontal-layout style-name="layout-row spacer-top spacer-bottom" size-full>
                 <v-button _id="submitButton" style-name="button-standard spacer-empty"/>
