--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/TemplateTabView.html
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/TemplateTabView.html
@@ -29,6 +29,7 @@
             <v-label _id="submitSeparatorLabel" style-name="separator spacer-empty"/>
             <v-horizontal-layout style-name="layout-row spacer-top spacer-bottom" size-full>
                 <v-button _id="submitButton" style-name="button-standard spacer-empty"/>
+                <v-button _id="cancelButton" :expand/>
             </v-horizontal-layout>
         </v-vertical-layout>
     </v-panel>
