--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/TemplateTabView.html
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/TemplateTabView.html
@@ -27,9 +27,10 @@
                 <sb-template-layout _id="templateLayout" style-name="layout-strings" size-full :expand/>
             </v-horizontal-layout>
             <v-label _id="submitSeparatorLabel" style-name="separator spacer-empty"/>
-            <v-horizontal-layout style-name="layout-row spacer-top spacer-bottom" size-full>
+            <v-horizontal-layout style-name="layout-row spacer-top spacer-bottom">
                 <v-button _id="submitButton" style-name="button-standard spacer-empty"/>
-                <v-button _id="cancelButton" :expand/>
+                <v-button _id="cancelButton"/>
+                <v-button _id="removeButton" visible="false"/>
             </v-horizontal-layout>
         </v-vertical-layout>
     </v-panel>
