--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/SberbankUITemplate.html
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/SberbankUITemplate.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="package-mapping" content="sb:ru.klapatnyuk.sberbank.web"/>
+    <meta name="package-mapping" content="sb:ru.klapatnyuk.sberbank.web.layout"/>
 </head>
 <body>
 <v-vertical-layout size-full style-name="template-main">
