--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/tab/TemplateTabView.html
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/tab/TemplateTabView.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="package-mapping" content="sb:ru.klapatnyuk.sberbank.web"/>
+    <meta name="package-mapping" content="sb:ru.klapatnyuk.sberbank.web.layout"/>
 </head>
 <body>
 <v-horizontal-layout style-name="container-pattern-poll spacer-left spacer-top" size-full :expand>
