--- a/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/tab/TemplateTabView.html
+++ b/sberbank-web/src/main/resources/ru/klapatnyuk/sberbank/web/tab/TemplateTabView.html
@@ -5,8 +5,8 @@
     <meta name="package-mapping" content="sb:ru.klapatnyuk.sberbank.web.layout"/>
 </head>
 <body>
-<v-horizontal-layout style-name="container-pattern-poll spacer-left spacer-top" size-full :expand>
-    <v-vertical-layout _id="patternLayout" style-name="spacer-right">
+<v-horizontal-layout style-name="container-editor spacer-left spacer-top" size-full :expand>
+    <v-vertical-layout _id="entityLayout" style-name="spacer-right">
         <v-button _id="createButton" style-name="pattern-button"/>
         <v-label _id="editSeparatorLabel" style-name="separator"/>
         <v-label _id="editLabel" style-name="label-edit"/>
